--- a/chat/src/main/resources/lesson4/auth.fxml
+++ b/chat/src/main/resources/lesson4/auth.fxml
@@ -1,11 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@../../../../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lesson4.AuthController">
-    <TextField fx:id="login" layoutX="175.0" layoutY="104.0" prefHeight="48.0" prefWidth="251.0" styleClass="context-menu" stylesheets="@../../../../style.css" />
-    <TextField fx:id="password" layoutX="175.0" layoutY="170.0" prefHeight="48.0" prefWidth="251.0" styleClass="context-menu" stylesheets="@../../../../style.css" />
-    <Button layoutX="245.0" layoutY="240.0" mnemonicParsing="false" onAction="#enter" prefHeight="48.0" prefWidth="111.0" text="Вход" />
-    <Button layoutX="225.0" layoutY="302.0" mnemonicParsing="false" onAction="#reg" prefHeight="48.0" prefWidth="152.0" text="Регистрация" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="650.0" styleClass="background" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lesson4.AuthController">
+    <AnchorPane layoutX="35.0" layoutY="28.0" prefHeight="537.0" prefWidth="594.0" styleClass="menu-bar" stylesheets="@style.css" AnchorPane.bottomAnchor="23.0" AnchorPane.leftAnchor="23.0" AnchorPane.rightAnchor="23.0" AnchorPane.topAnchor="23.0">
+        <AnchorPane layoutX="127.0" layoutY="94.0" prefHeight="367.0" prefWidth="351.0" style="-fx-background-color: rgba(255, 250, 250, 0.3);">
+            <TextField fx:id="login" layoutX="41.0" layoutY="123.0" prefHeight="37.0" prefWidth="270.0" style="-fx-background-radius: 10;" styleClass="text-field" stylesheets="@style.css">
+                <effect>
+                    <DropShadow color="#828282ea" height="38.55" radius="9.1375" width="0.0" />
+                </effect>
+                <opaqueInsets>
+                    <Insets />
+                </opaqueInsets>
+            </TextField>
+            <PasswordField fx:id="password" layoutX="43.0" layoutY="184.0" prefHeight="37.0" prefWidth="270.0" style="-fx-background-radius: 10;" />
+            <Text fill="#2b2b2b80" layoutX="43.0" layoutY="116.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login">
+                <font>
+                    <Font size="14.0" />
+                </font>
+            </Text>
+            <Text fill="#2b2b2b80" layoutX="43.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password">
+                <font>
+                    <Font size="14.0" />
+                </font>
+            </Text>
+            <Button layoutX="43.0" layoutY="244.0" mnemonicParsing="false" onAction="#reg" prefHeight="37.0" prefWidth="122.0" stylesheets="@style.css" text="Sign up">
+                <font>
+                    <Font name="MT Extra" size="16.0" />
+                </font>
+                <effect>
+                    <DropShadow color="#0000008f" height="12.1" radius="2.525" width="0.0" />
+                </effect>
+            </Button>
+            <Button layoutX="189.0" layoutY="244.0" mnemonicParsing="false" onAction="#enter" prefHeight="37.0" prefWidth="122.0" style="-fx-background-radius: 10; -fx-background-color: #fff;" stylesheets="@style.css" text="Sign in">
+                <font>
+                    <Font name="MT Extra" size="16.0" />
+                </font>
+                <effect>
+                    <DropShadow color="#0000008f" height="12.1" radius="2.525" width="0.0" />
+                </effect>
+            </Button>
+        </AnchorPane>
+    </AnchorPane>
 </AnchorPane>
