--- a/chat/src/main/resources/lesson4/chat.fxml
+++ b/chat/src/main/resources/lesson4/chat.fxml
@@ -1,31 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
 <VBox prefHeight="400.0" prefWidth="640.0" stylesheets="style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lesson4.ChatController">
-    <MenuBar stylesheets="style.css" VBox.vgrow="NEVER">
+    <MenuBar stylesheets="@style.css" VBox.vgrow="NEVER">
         <Menu mnemonicParsing="false" text="File">
             <MenuItem mnemonicParsing="false" onAction="#quit" text="Quit" />
         </Menu>
     </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="607.0" prefWidth="377.0" styleClass="background" stylesheets="style.css" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="607.0" prefWidth="377.0" stylesheets="@style.css" VBox.vgrow="ALWAYS">
         <VBox prefHeight="434.0" prefWidth="640.0" styleClass="menu-bar" stylesheets="style.css">
             <TextArea fx:id="output" editable="false" prefHeight="426.0" prefWidth="640.0" styleClass="background" stylesheets="style.css" />
             <HBox prefHeight="100.0" prefWidth="200.0">
-                <TextField fx:id="input" onAction="#send" prefHeight="54.0" prefWidth="583.0" stylesheets="style.css" />
-                <Button alignment="CENTER" mnemonicParsing="false" onAction="#send" prefHeight="54.0" prefWidth="204.0" stylesheets="style.css" text="SEND" textFill="#fefeff" textOverrun="CENTER_ELLIPSIS" underline="true">
+                <TextField fx:id="input" onAction="#send" prefHeight="54.0" prefWidth="583.0" styleClass="text-field" stylesheets="@style.css" />
+                <Button alignment="CENTER" mnemonicParsing="false" onAction="#send" prefHeight="54.0" prefWidth="204.0" text="SEND" textFill="#1818cd" textOverrun="CENTER_ELLIPSIS" underline="true">
                <font>
                   <Font name="Kefa Regular" size="13.0" />
                </font></Button>
             </HBox>
         </VBox>
     </AnchorPane>
-   <styleClass>
-      <String fx:value="background" />
-      <String fx:value="column-header" />
-      <String fx:value="context-menu" />
-   </styleClass>
 </VBox>
