--- a/chat/src/main/resources/lesson4/registration.fxml
+++ b/chat/src/main/resources/lesson4/registration.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@../../../../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lesson4.RegistrationController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lesson4.RegistrationController">
     <TextField fx:id="login" layoutX="179.0" layoutY="112.0" prefHeight="52.0" prefWidth="242.0" styleClass="context-menu" stylesheets="@../../../../style.css" />
     <TextField fx:id="password" layoutX="179.0" layoutY="180.0" prefHeight="52.0" prefWidth="242.0" styleClass="context-menu" stylesheets="@../../../../style.css">
       <font>
